--- a/index.html
+++ b/index.html
@@ -4,11 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!----Font awesome link---->
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome/js/all.min.js">
+    <!-----Main css link----->
+    <link rel="stylesheet" href="style.css">
+
     <title>project 2</title>
+
 </head>
 <body>
 
-    <h1>aslam hosen </h1>
+   <header class="menu-bar">
+         <div class="container">
+                <div class="menu-bar-wrapper">
+                       <div class="menu-item-left">
+                           <h1>G3 Architects</h1>
+                       </div>
+                       <div class="menu-item-right">
+                           <ul class="list-bar">
+                               <li>Home</li>
+                               <li>About</li>
+                               <li>Contact</li>
+                               <li>Blog</li>
+                               <li>Login</li>
+                           </ul>
+                       </div>
+                </div>
+         </div>
+
+         <div class="banner-area">
+               <div class="container">
+                      <div class="banner-wrapper">
+                             <div class="banner-content">
+                                  <h1>Brand New Group of Architects</h1>
+                                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                                  <button class="btn-bg">Explore More <i class="fa-solid fa-arrow-right-long"></i></button>
+                             </div>
+                             <div class="banner-image">
+                                  <img src="image/banner.png" alt="">
+                             </div>
+                      </div>
+               </div>
+         </div>
+   </header>
+
+
+   <section class="our-features">
+          <div class="container">
+                 <div class="div features-wrapper">
+                        <div class="features-img">
+                              <img src="image/team1.png" alt="">
+                              <img src="image/team2.png" alt="">
+                              <img src="image/team3.png" alt="">
+                              <img src="image/team4.png" alt="">
+                        </div>
+                        <div class="features-content">
+                              <div class="span-color">
+                                    <span class="color1">Quick list</span>
+                                    <span class="color2"> of Our </span>
+                                    <span class="color3">Features</span>
+                              </div>
+                              <p>There are many variations of passages of         
+                                    but the majority have suffered alteration in some form, by injected available LoreIpsum,
+                                    humour, or randomised words which don't look even
+                              </p>
+                                <button class="btn-bg">Explore More <i class="fa-solid fa-arrow-right-long"></i></button>
+                        </div>
+                 </div>
+          </div>
+   </section>
     
 </body>
 </html>
