--- a/index.html
+++ b/index.html
@@ -74,6 +74,55 @@
                  </div>
           </div>
    </section>
+
+
+   <section class="second-features-area">
+         <div class="container">
+                <div class="second-features-wrapper">
+                       <div class="second-features-content">
+                           <h1>Features you will love & enjoy</h1>
+                           <p>There are many variations of passages of Lorem Ipsum    
+                            majority have suffered alteration in some form, by injected humour, or available, but the
+                            randomised words which don't look even
+                            </p>
+                           <div class="single-features">
+                             <h2>Dexktop & Mobile Version</h2>
+                             <p>There are many variations of passages of Lorem Ipsum by
+                                but the majority have suffered alteration in some form, 
+                                injected humour, available or randomised.</p>
+                           </div>
+                           <div class="single-features">
+                             <h2>Dexktop & Mobile Version</h2>
+                             <p>There are many variations of passages of Lorem Ipsum by
+                                but the majority have suffered alteration in some form, 
+                                injected humour, available or randomised.</p>
+                           </div>
+                           <div class="single-features">
+                             <h2>Dexktop & Mobile Version</h2>
+                             <p>There are many variations of passages of Lorem Ipsum by
+                                but the majority have suffered alteration in some form, 
+                                injected humour, available or randomised.</p>
+                           </div>
+                           <div class="single-features">
+                             <h2>Dexktop & Mobile Version</h2>
+                             <p>There are many variations of passages of Lorem Ipsum by
+                                but the majority have suffered alteration in some form, 
+                                injected humour, available or randomised.</p>
+                           </div>
+                       </div>
+                       <div class="second-features-img">
+                          <img src="image/architect.png" alt="">
+                          <button class="btn-bg">
+                            <h1>10+Year</h1>
+                            <span>Experience</span>
+                           </button>
+                       </div>
+                       
+                </div>
+         </div>
+   </section>
+   
+
     
 </body>
 </html>
