--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
    <section class="our-features">
           <div class="container">
-                 <div class="div features-wrapper">
+                 <div class="features-wrapper">
                         <div class="features-img">
                               <img src="image/team1.png" alt="">
                               <img src="image/team2.png" alt="">
@@ -119,6 +119,49 @@
                        </div>
                        
                 </div>
+         </div>
+   </section>
+
+   
+   <section class="some-facts-area">
+         <div class="container">
+               <div class="some-area-flex">
+                  <div class="some-area-font">
+                        <h1>Some Facts</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but
+                         the majority have suffered alteration.</p>
+                    </div>
+                      <div class="some-facts-wrapper">
+                             <div class="single-some-facts">
+                                   <div class="some-icon">
+                                         <img src="image/icons/ribon.png" alt="">
+                                   </div>
+                                   <h2>50</h2>
+                                   <span>Awards Winnings</span>
+                             </div>
+                             <div class="single-some-facts">
+                                   <div class="some-icon">
+                                         <img src="image/icons/projects.png" alt="">
+                                   </div>
+                                   <h2>120</h2>
+                                   <span>Project Finished</span>
+                             </div>
+                             <div class="single-some-facts">
+                                   <div class="some-icon">
+                                         <img src="image/icons/customers.png" alt="">
+                                   </div>
+                                   <h2>520</h2>
+                                   <span>Clients Worked</span>
+                             </div>
+                             <div class="single-some-facts">
+                                   <div class="some-icon">
+                                         <img src="image/icons/email.png" alt="">
+                                   </div>
+                                   <h2>2738</h2>
+                                   <span>Email Send</span>
+                             </div>
+                      </div>
+               </div>
          </div>
    </section>
    
