--- a/index.html
+++ b/index.html
@@ -164,6 +164,35 @@
                </div>
          </div>
    </section>
+
+   <section class="our-sponspor">
+          <div class="container">
+              <div class="sponspor-flex">
+                  <div class="sponspor-text">
+                        <h1>Our Sponspors</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but
+                          the majority have suffered alteration.</p>
+              </div>
+                  <div class="sponspor-wrapper">
+                        <div class="sponspor-img">
+                              <img src="image/sponsors/spotify.png" alt="">
+                        </div>
+                        <div class="sponspor-img">
+                              <img src="image/sponsors/amazon.png" alt="">
+                        </div>
+                        <div class="sponspor-img">
+                              <img src="image/sponsors/google.png" alt="">
+                        </div>
+                        <div class="sponspor-img">
+                              <img src="image/sponsors/figma.png" alt="">
+                        </div>
+                        <div class="sponspor-img">
+                              <img src="image/sponsors/telerama.png" alt="">
+                        </div>
+                  </div>
+              </div>
+          </div>
+   </section>
    
 
     
