--- a/index.html
+++ b/index.html
@@ -193,8 +193,24 @@
               </div>
           </div>
    </section>
+
+   <footer class="footer-area">
+         <div class="footer-text">
+                <h1>Web Developer</h1>
+                <p>Foalish Develoer is a blog website where you will find a great tutorial and web design and development. Here eash tutorial beautifully described step by step with required source code</p>
+                <div class="footer-icon">
+                  <i class="fa-brands fa-facebook-f"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-google-plus-g"></i>
+                  <i class="fa-brands fa-youtube"></i>
+                  <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <div class="copyright">
+                  <p>All rights reserved copyright@2023 startup landing page design</p>
+                </div>
+         </div>
+   </footer>
    
 
-    
 </body>
 </html>
